# s3-backup

./: LICENSE  README.md  s3b.sln
.obsidian/: workspace.json
db/: scratch.sql
db/sqlite/: 001_create_tables.sql  002_setup.sql
db/sqlserver/: 001_create_tables.sql
docs/: Migration Changes.md  s3-backup-requirements.md
dotnet/: s3-backup-requirements.md
dotnet/s3b/: Program.cs  appsettings.macos.json  s3b.csproj
dotnet/s3b/Properties/: launchSettings.json
dotnet/s3bCommon/: Model.cs  Template.cs
dotnet/s3bCommon/Properties/: launchSettings.json
dotnet/s3bDomain/: BackupLog.cs  LocalFolder.cs  ObjectInfo.cs  s3bDomain.csproj
dotnet/s3bPersist/: Logger.cs  MessageLog.cs  PersistBase.cs  s3bPersist.csproj
dotnet/s3bProcess/: Backup.cs  Decompress.cs  Decrypt.cs  Download.cs  Expand.cs  LIstObj.cs  ProcExec.cs  s3bProcess.csproj
dotnet/s3bSqliteTemplate/: s3bSqliteTemplate.cs
rust/: Cargo.toml  README.md
rust/src/: archive.rs  backup.rs  cli.rs  config.rs  crypto.rs  error.rs  hashing.rs  logging.rs  main.rs  manifest.rs  naming.rs  restore.rs  time_util.rs
rust/src/s3/: mod.rs  sigv4.rs  xml.rs
s3b/: ProcExec.cs  Program.cs  appsettings.json  appsettings.macos.json  s3b.csproj
s3b.SqlPersist/: SqlPersist.Designer.cs  SqlPersist.resx  s3b.SqlPersist.csproj
s3b.SqlitePersist/: newer.template.Designer.cs  newer.template.resx  s3b.SqliteTemplate.csproj  s3b.resources.resx  sql.Designer.cs
s3bAgent/: Program.cs
s3bCommon/: Config.cs  Model.cs  Template.cs
s3bDomain/: BackupSet.cs  LocalFile.cs  LocalFolder.cs
s3bMSSqlTemplate/: s3bMSSqlTemplate.cs
s3bPersist/: Logger.cs  PersistBase.cs  SqlPersist.cs  SqlitePersist.cs
s3bProcess/: Backup.cs  Job.cs  Restore.cs
