[package]
name = "s3b"
version = "0.1.0"
edition = "2021"
description = "Rust port of s3b: archive, compress, encrypt and sync folders to an S3-compatible bucket."
default-run = "s3b"

[[bin]]
name = "s3b"
path = "src/main.rs"

[dependencies]
# Archiving / compression -- pure Rust, no system tar/gzip binaries needed.
tar = "0.4"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }

# Encryption -- authenticated AEAD, pure Rust, no OpenSSL linkage.
aes-gcm = "0.10"

# X25519 key agreement for the recipient keypair (replaces the old
# Argon2id-over-a-shared-passphrase design). "static_secrets" enables the
# reusable StaticSecret type used for the long-lived recipient keypair;
# EphemeralSecret (the per-file sender-side key) needs no feature flag.
x25519-dalek = { version = "2", features = ["static_secrets"] }

# HKDF-SHA256: turns each file's raw X25519 shared secret into an AES-256 key.
hkdf = "0.12"

# Text-safe encoding for the .pub/.key files genkey writes.
base64 = "0.22"

# Hashing: sha256 for change-detection content hashes and S3 upload
# checksum verification (x-amz-checksum-sha256).
sha2 = "0.10"

# HMAC-SHA256 for hand-rolled SigV4 request signing.
hmac = "0.12"

# Random salt/nonce generation.
rand = "0.8"

# Synchronous HTTP client for the hand-rolled S3 SigV4 client (no async runtime).
ureq = { version = "2", default-features = false, features = ["tls"] }

# Minimal, dependency-light XML parsing for S3 ListObjectsV2 / error responses.
quick-xml = "0.31"

# Config file (TOML) and S3 request bodies / bucket manifest (JSON).
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Typed errors at module boundaries.
thiserror = "1"

# Hex encoding for hashes/signatures.
hex = "0.4"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 2
